@@ -44,7 +44,7 @@ Besides that, MOP fixes some more or less known bugs of vanilla My Summer Car. N
   - Slot machine glass element inside of the store (2.9.3)
   - Wrist watch dials Z fighting with the watchface and themselves (2.9.3)
 - Annoyingly small hitbox for the repair shop cash register (2.9.6)
-- Missing collisions to the car parked at the Fleetari's repair shop (2.10)
+- Missing collisions of the car parked at the Fleetari's repair shop (2.10)
 - Negative battery terminal disappearing seemingly for no reason at all (2.11)
 - Save files staying in the "read only" state (2.11)
 - Satsuma dashboard needles Z-fighting (2.11.3)
