@@ -21,7 +21,6 @@ namespace MOP
 {
     class WorldObject
     {
-        // Objects class by Konrad "Athlon" Figura
 
         /// <summary>
         /// Game object that this instance of the class controls.
