@@ -30,7 +30,7 @@ namespace MOP
         public override string Name => "Modern Optimization Plugin"; //You mod name
 #endif
         public override string Author => "Athlon"; //Your Username
-        public override string Version => "2.11.2"; //Version
+        public override string Version => "2.11.3"; //Version
 
         #region Settings & Configuration
         // ModLoader configuration.
