@@ -68,7 +68,8 @@ namespace MOP
             // Shadow distance.
             if (shadowDistanceOriginalValue == 0)
                 shadowDistanceOriginalValue = QualitySettings.shadowDistance;
-            QualitySettings.shadowDistance = (bool)MOP.EnableShadowAdjusting.GetValue() ? float.Parse(MOP.ShadowDistance.GetValue().ToString()) : shadowDistanceOriginalValue;
+            QualitySettings.shadowDistance = (bool)MOP.EnableShadowAdjusting.GetValue() ? 
+                                             float.Parse(MOP.ShadowDistance.GetValue().ToString()) : shadowDistanceOriginalValue;
 
             ToggleBackgroundRunning();
 
