@@ -1,7 +1,17 @@
+### Added
+
+- Added a message, if player tries to open output log, or last MOP_LOG when there is none
+
+### Changes
+
+- Improved the performance of sectors
+
 ### Bug Fixes
 
 - (My Summer Car Bug) Fixed Z fighting of Satsuma dashboard needles
 - Fixed a bug in which the Satsuma could potentially be sent into the air, if the player Alt+Tabbed during MOP loading screen
 - Fixed bus roll fix not working as intended
-- Fixed a bug in which MOP would throw an error while trying to hook the save game to the phone handle/
-- Fixing items falling out of the Satsuma's boot 2: The Electric Boogaloo
+- Fixed a bug in which MOP would throw an error while trying to hook the save game action to the phone handle
+- Fixing items falling out of the Satsuma's boot 2: The Collider Boogaloo
+- Fixed a bug with infinitely burning garbage barrel fire
+- Fixed MOP throwing error, if the pedastrian has been knocked out
